// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPoem Should create a poem if it's friday 1`] = `
Object {
  "author": "author",
  "text": "text",
  "title": "title",
}
`;

exports[`createPoem Should create a poem without an author or title if it's friday 1`] = `
Object {
  "author": undefined,
  "text": "text",
  "title": undefined,
}
`;
